--- a/3rd_experiment/diode/beforquestion.tex
+++ b/3rd_experiment/diode/beforquestion.tex
@@ -1,10 +1,30 @@
 \documentclass[11pt,dvipdfmx]{jarticle}
 
+\usepackage{eee}
 \usepackage{subfig}
 \usepackage{here}
 
 
 \begin{document}
+\begin{figure}
+  \centering
+  \includegraphics[keepaspectratio,scale=0.7]{diode.pdf}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[keepaspectratio,scale=0.7]{diode_reverse.pdf}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[keepaspectratio,scale=0.7]{zener.pdf}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[keepaspectratio,scale=0.7]{zener_potention.pdf}
+\end{figure}
 
 
 
